terraform/vpc.tf
// VPC module
module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "~> 6.6"

  name = local.name
  cidr = local.vpc_cidr

  azs             = local.azs
  private_subnets = [for k, v in local.azs : cidrsubnet(local.vpc_cidr, 4, k)]
  public_subnets  = [for k, v in local.azs : cidrsubnet(local.vpc_cidr, 8, k + 48)]

  enable_nat_gateway = true
  single_nat_gateway = true

  public_subnet_tags = {
    "kubernetes.io/role/elb" = 1
  }

  private_subnet_tags = {
    "kubernetes.io/role/internal-elb" = 1
    # Tags subnets for Karpenter auto-discovery
    "karpenter.sh/discovery" = local.name
  }

  tags = local.tags
}

// Traefik external security groups
resource "aws_security_group" "ingress_traefik_external" {
  name        = "ingress-traefik-external"
  description = "Allow public HTTP and HTTPS traffic"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # modify to your requirements
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # modify to your requirements
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.tags,
    {
      Name = "ingress-traefik-external",
    }
  )
}

// Shared backend SG for aws-load-balancer-controller
resource "aws_security_group" "alb_backend" {
  name        = "${local.name}-alb-backend"
  description = "Shared backend SG managed by aws-load-balancer-controller"
  vpc_id      = module.vpc.vpc_id

  # The controller adds/removes rules at runtime
  revoke_rules_on_delete = true

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-alb-backend",
    }
  )
}

resource "aws_security_group" "ingress_traefik_node" {
  name        = "ingress-traefik-node"
  description = "Allow local HTTP and HTTPS traffic for Worker nodes"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [local.vpc_cidr]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [local.vpc_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [local.vpc_cidr]
  }

  tags = merge(
    local.tags,
    {
      Name                     = "ingress-traefik-node",
      "karpenter.sh/discovery" = local.name
    }
  )
}
